--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.1",
     "bcrypt>=5.0.0",
-    "fastapi>=0.121.0",
+    "fastapi[standard]>=0.121.0",
     "pytest>=8.4.2",
     "sqlalchemy>=2.0.44",
 ]
