--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL= postgresql://user:password@localhost:5432/mydatabase
-SECRET_KEY=your_secret_key_here
+DATABASE_URL= postgresql://postgres.rxoqhjunxatodtsznghs:PDgg1fzSSsjX7eho@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
+SECRET_KEY= $2b$12$giYkH/1eg4s6YHaUI83EgueMu3I8MzLoqYHrc4rXudHv9.0ogGtfi
 ACCESS_TOKEN_EXPIRE_MINUTES=60
