--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "bcrypt>=5.0.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.0",
+    "psycopg2>=2.9.11",
     "pytest>=8.4.2",
     "sqlalchemy>=2.0.44",
 ]
