--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.0",
     "psycopg2>=2.9.11",
+    "psycopg2-binary>=2.9.11",
     "pytest>=8.4.2",
     "sqlalchemy>=2.0.44",
 ]
