--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://postgres.rxoqhjunxatodtsznghs:PDgg1fzSSsjX7eho@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
 
 
 [post_write_hooks]
