--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.1",
+    "asyncpg>=0.30.0",
     "bcrypt>=5.0.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.0",
     "psycopg2>=2.9.11",
+    "psycopg2-binary>=2.9.11",
     "pytest>=8.4.2",
     "sqlalchemy>=2.0.44",
 ]
