--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ dependencies = [
     "bcrypt>=5.0.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.0",
+    "jose>=1.0.0",
+    "jwt>=1.4.0",
     "passlib[bcrypt]>=1.7.4",
     "psycopg2>=2.9.11",
     "psycopg2-binary>=2.9.11",
     "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.44",
 ]
