--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.1",
     "asyncpg>=0.30.0",
-    "bcrypt>=5.0.0",
+    "bcrypt==4.3.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.121.0",
     "jose>=1.0.0",
     "jwt>=1.4.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib>=1.7.4",
     "psycopg2>=2.9.11",
     "psycopg2-binary>=2.9.11",
     "pytest>=8.4.2",
