--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi[standard]>=0.121.0",
     "jose>=1.0.0",
     "jwt>=1.4.0",
+    "ngrok>=1.5.1",
     "passlib>=1.7.4",
     "psycopg2>=2.9.11",
     "psycopg2-binary>=2.9.11",
